@@ -1,6 +1,7 @@
 package gui;
 
 
+import data.dataStructure.Queues;
 import javafx.application.Application;
 import javafx.scene.control.Button;
 import javafx.scene.control.TextField;
@@ -11,7 +12,8 @@ import java.sql.Timestamp;
 
 
 import static gui.MyScreen.*;
-
+//project structure -> module ->add jars
+// --module-path \Users\ll4\Downloads\openjfx-11.0.2_windows-x64_bin-sdk\javafx-sdk-11.0.2\lib --add-modules javafx.graphics,javafx.controls,javafx.base
 public class Main extends Application {
 
     @Override
@@ -29,8 +31,10 @@ public class Main extends Application {
         Button btnExit = new Button("Exit");
         Button btnReadFromDB = new Button("readFromDB");
         Button btnRemoveFromDB = new Button("remove all from DB");
+        Button btnStackArrayPush = new Button("Push into stack array");
+        Button btnStackArrayPop = new Button("Pop from stack array");
 
-        Button[] btnArr={btnEntry,btnExit,btnReadFromDB,btnRemoveFromDB};
+        Button[] btnArr={btnEntry,btnExit,btnReadFromDB,btnRemoveFromDB, btnStackArrayPush, btnStackArrayPop};
 
 
         PersonObserverForDB personObserverForDB = new PersonObserverForDB();
@@ -40,9 +44,9 @@ public class Main extends Application {
         person.addObserver(personObserverForDB);
 
 
-
+        Queues queue = new Queues(10);
         primaryStage.setTitle("Zeiterfassung");
-        primaryStage.setScene(makeScene( btnArr, person, personObserverForDB, txtArr));
+        primaryStage.setScene(makeScene( btnArr, person, personObserverForDB, txtArr, queue));
         primaryStage.show();
 
 
